
## Makefile.am for SDL using the Pyro video driver

noinst_LTLIBRARIES = libvideo_syllable.la
libvideo_pyro_la_SOURCES = $(PYRO_VIDEO_SRCS)

# The SDL Pyro video driver sources
PYRO_VIDEO_SRCS = 			\
	SDL_View.h		\
	SDL_Win.h		\
	SDL_lowvideo.h		\
	SDL_sysevents.cc	\
	SDL_sysevents_c.h	\
	SDL_sysmouse.cc		\
	SDL_sysmouse_c.h	\
	SDL_sysvideo.cc		\
	SDL_syswm.cc		\
	SDL_syswm_c.h		\
	SDL_sysyuv.cc		\
	SDL_sysyuv.h		\
	SDL_SylApp.cc

